file(GLOB SOURCES *.cpp)

add_library(ArmNative SHARED ${SOURCES})

target_compile_definitions(ArmNative PUBLIC UNICODE)
target_link_libraries(ArmNative common ${CAPSTONE_LIBRARIES})

set(OUTDIR ${CMAKE_BUILD_TYPE})

set_target_properties(ArmNative
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${OUTDIR}
	LIBRARY_OUTPUT_DIRECTORY ${OUTDIR}
	RUNTIME_OUTPUT_DIRECTORY ${OUTDIR}
)

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
	string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
	set_target_properties(ArmNative
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTDIR}
		LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTDIR}
		ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTDIR}
	)
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
